# KontrolRGB

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
crates/kontrolrgb-effects/: Cargo.toml
crates/kontrolrgb-effects/src/: catalog.rs  effects.rs  fixtures.rs  lib.rs  types.rs
crates/kontrolrgb-effects/src/layouts/: gmmk_ansi.rs  gmmk_tkl.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin.rs  commands.rs  lib.rs  main.rs  persistence.rs  power_watch.rs  process_guard.rs  state.rs
src-tauri/src/device/: manager.rs  mock.rs  mod.rs  types.rs
src-tauri/src/device/gigabyte_gpu/: controller.rs  mod.rs  nvapi.rs
src-tauri/src/device/gmmk/: controller.rs  mod.rs
src-tauri/src/device/layouts/: gmmk_ansi.rs  gmmk_tkl.rs  mod.rs
src-tauri/src/device/msi/: controller.rs  mod.rs  watchdog.rs
src-tauri/src/effects/: engine.rs  mod.rs
src-tauri/src/fan/: lpc.rs  mod.rs  nct6687.rs  safety.rs
src-tauri/src/gpu_telemetry/: mod.rs  nvml.rs
src/components/: BurstDebugModal.tsx  ConflictModal.tsx  DevicePage.tsx  EffectsLibraryPage.tsx  FanPage.tsx  GpuTelemetryBar.tsx  SettingsPage.tsx  Sidebar.tsx  SyncPage.tsx  TitleBar.tsx
src/components/effects/: BrightnessSlider.tsx  ColorPickerPopover.tsx  EffectPanel.tsx
src/components/zones/: ArgbHeaderStrip.tsx  GpuRender.tsx  KeyboardLayout.tsx  LedStrip.tsx  MotherboardBoard.tsx  ZoneView.tsx
src/lib/: api.ts  effectRegistry.ts  events.ts  fanApi.ts  updater.ts
src/store/: devices.ts  fans.ts  settings.ts
src/types/: device.ts
