[package]
name = "kontrolrgb"
version = "0.2.3"
description = "Custom RGB controller for local hardware"
authors = ["jawad"]
edition = "2021"
default-run = "kontrolrgb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kontrolrgb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"   # OTA updates via GitHub releases
tauri-plugin-process = "2"   # restart() after an update is installed
tauri-plugin-autostart = "2" # launch on boot (hidden to tray via --minimized)
kontrolrgb-effects = { path = "../crates/kontrolrgb-effects" }  # shared with kontrolrgb-sim
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
parking_lot = "0.12"
thiserror = "2"
hidapi = "2"           # M2: GMMK v1 keyboard, M3: MSI Mystic Light
sysinfo = "0.32"      # process enumeration for startup conflict guard

# M4: Gigabyte GPU uses hand-rolled NvAPI FFI, no crate

[target.'cfg(windows)'.dependencies]
# Dynamically load NVML / NvAPI DLLs at runtime (GPU telemetry + Gigabyte GPU
# RGB) so the app still starts on machines without them. Fan control no longer
# uses libloading — it talks to the PawnIO driver via DeviceIoControl (below).
libloading = "0.8"
# Raw Win32: overlapped HID writes (ovl probe) AND the PawnIO ring-0 fan path
# (CreateFile + DeviceIoControl to \Device\PawnIO, plus the ISA-bus mutex).
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Shell",                       # ShellExecuteW "runas" elevation
] }

